--- a/stylovani.css
+++ b/stylovani.css
@@ -38,3 +38,53 @@ nav ul li{
     font-size: 28px;
 
 }
+.hero{
+    width: 100%;
+    height: 600px;
+    background: url("img/hero.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: white;
+    text-align: center;
+    padding: 180px 0;
+}
+
+.hero h2{
+   font-size: 50px;
+   margin-bottom: 10px; 
+}
+
+.hero p{
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.search_box{
+    max-width: 550px;
+    margin: 15px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search_box input{
+    width: 70%;
+    padding: 10px;
+    outline: none;
+    border: 0;
+    border-radius: 5px 0 0 5px;
+    font-size: 1rem;
+    border: 1px solid gray;
+}
+
+.search_box button{
+    padding: 10px 20px;
+    outline: none;
+    border: 0;
+    border-radius: 0 5px 5px 0;
+    font-size: 1rem;
+    background: gray;
+    color: white;
+    cursor: pointer;
+}
