--- a/stylovani.css
+++ b/stylovani.css
@@ -48,6 +48,7 @@ nav ul li{
     color: white;
     text-align: center;
     padding: 180px 0;
+    margin-bottom: 20px;
 }
 
 .hero h2{
@@ -86,5 +87,59 @@ nav ul li{
     font-size: 1rem;
     background: gray;
     color: white;
+    cursor: pointer;
+}
+
+.recipes{
+    padding: 50px 0;
+}
+
+.recipes h1{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 32px;
+}
+
+.recipe_section{
+    width: 85%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    column-gap: 10px;
+}
+
+.recipe_card{
+    background: white;
+    margin: 30px 10px;
+    border-radius: 8px;
+    border: 1px solid lightgray;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.recipe_card img{
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+}
+
+.recipe_card h2{
+    font-size: 22px;
+    padding: 20px;
+    text-align: center;
+}
+
+.recipe_card p{
+    font-size: 18px;
+    padding: 20px;
+}
+
+.recipe_card a{
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    background: #333;
+    color: white;
+    padding: 15px 0;
     cursor: pointer;
 }
