--- a/stylovani.css
+++ b/stylovani.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -12,13 +13,18 @@ body{
 }
 
 header{
+    position: fixed;
+    top: 0;
+    left: 0;
     height: 80px;
     width: 100%;
     background: #222121;
     color: white;
     display: flex;
     align-items: center;
+    z-index: 100;
 }
+
 .container{
     width: 85%;
     margin: 0 auto;
@@ -34,11 +40,19 @@ nav ul li{
     font-weight: 550;
 }
 
+.nav-list a {
+    color: white;
+    text-decoration: none;
+}
+
 .logo{
     font-size: 28px;
 
 }
+
 .hero{
+    margin-top: 80px;
+    position: relative;
     width: 100%;
     height: 600px;
     background: url("img/hero.jpeg");
@@ -49,6 +63,22 @@ nav ul li{
     text-align: center;
     padding: 180px 0;
     margin-bottom: 20px;
+    overflow: hidden;
+}
+
+.hero .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+
+.hero .hero_section {
+    position: relative;
+    z-index: 2;
 }
 
 .hero h2{
@@ -58,7 +88,7 @@ nav ul li{
 }
 
 .hero p{
-    font-size: 30px;
+    font-size: 25px;
     margin-bottom: 10px;
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
 }
@@ -98,6 +128,7 @@ nav ul li{
 
 .recipes{
     padding: 50px 0;
+    scroll-margin-top: 100px;
 }
 
 .recipes h1{
@@ -153,4 +184,27 @@ nav ul li{
 
 .recipe_card a:hover {
     background: #555;
+}
+
+.about {
+    background: #f9f9f9;
+    padding: 30px 0;
+}
+
+.about .container {
+    width: 85%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.about h1 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 32px;
+}
+
+.about p {
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 20px;
 }
