--- a/recipe_style.css
+++ b/recipe_style.css
@@ -15,6 +15,7 @@ body {
     background-color: rgba(0, 0, 0, 0.3);
     z-index: 1;
 }
+
 .recipe_info {
     position: relative;
     background-color: rgba(247, 244, 244, 0.943);
@@ -27,4 +28,31 @@ body {
     box-shadow: 5px 4px 8px rgba(0, 0, 0, 0.4);
     padding: 25px;
     z-index: 2;
+}
+
+.recipe_img {
+    flex: 1;
+}
+
+.recipe_img img {
+    width: 80%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 25px;
+    box-shadow: 5px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.recipe_text {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px;
+}
+
+.recipe_text h1 {
+    font-size: 48px;
+    margin-bottom: 60px;
+    text-align: center; 
+    color: rgb(43, 41, 41)
 }
