--- a/stylovani.css
+++ b/stylovani.css
@@ -78,7 +78,7 @@ nav ul li{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.35);
     z-index: 1;
 }
 
@@ -96,7 +96,7 @@ nav ul li{
 .hero p{
     font-size: 25px;
     margin-bottom: 10px;
-    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
 }
 
 .search_box{
@@ -111,15 +111,15 @@ nav ul li{
     width: 70%;
     padding: 10px;
     outline: none;
-    border-radius: 5px 0 0 5px;
+    border-radius: 12px 0 0 12px;
     font-size: 1rem;
-    border: 1px solid rgb(104, 104, 104);;
+    border: 1px solid rgb(104, 104, 104);
 }
 
 .search_box button{
     padding: 10px 20px;
     border: 0;
-    border-radius: 0 5px 5px 0;
+    border-radius: 0 12px 12px 0;
     font-size: 1rem;
     background: rgb(104, 104, 104);
     color: white;
