--- a/stylovani.css
+++ b/stylovani.css
@@ -214,7 +214,7 @@ nav ul li{
 }
 
 .contact {
-    background: #f9f9f9;
+    background: #222121;
     padding: 30px 0;
 }
 
@@ -228,11 +228,13 @@ nav ul li{
     text-align: center;
     margin-bottom: 30px;
     font-size: 32px;
+    color: white;
 }
 
 .contact p {
     font-size: 18px;
     line-height: 1.5;
     margin-bottom: 20px;
+    color: white;
 }
 
